--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ async-timeout==4.0.2
 attrs==23.1.0
 black==23.7.0
 charset-normalizer==3.2.0
-click==8.1.5
+click==8.1.6
 colorama==0.4.6
 Django==4.2.3
 django-rest-framework==0.1.0
@@ -22,3 +22,5 @@ pytz==2023.3
 sqlparse==0.4.4
 tzdata==2023.3
 yarl==1.9.2
+redis~=4.6.0
+celery~=5.3.1
